DONE 1. added material design to build 2. added material design icons and chips TODO 1. fix favorites list 2. fix categories

--- a/template/favorites/favorites.html
+++ b/template/favorites/favorites.html
@@ -23,29 +23,35 @@
 </ion-view>
 
 <script type="text/ng-template" id="verse-detail.html">
-<div ng-controller="verseDetailCtrl as vm">
+<ion-modal-view class= "modal" ng-controller="verseDetailCtrl as vm">
     <!-- header bar -->
-  <ion-nav-bar title="{{vm.verseDetail.bookId}} {{vm.verseDetail.chapId}} : {{vm.verseDetail.verse}}" align-title="center">
-  <ion-nav-buttons  title="Edit {{vm.bookId}} {{vm.chapId}} {{vm.verse}}" side="secondary">
-    <button ng-click="vm.toggleLike()">
-        <i class="icon ion-android-star" ng-class={isactive:vm.verseDetail.isliked}></i>
-    </button>
-  </ion-nav-buttons>
-  </ion-nav-bar>
+  <ion-header-bar class="bar bar-header header-positive" align-title="center">
+    <h4 class="title">{{vm.verseDetail.bookId}} {{vm.verseDetail.chapId}} {{vm.verseDetail.verseId}}</h4>
+  </ion-header-bar>
   <!-- main content -->
     <ion-content padding="true" class="has-header">
-            <ion-item class="item " id="verseDetail-list-item19">
-                <p>{{vm.verseDetail.vid}}</p>
-            </ion-item>
-        <form id="editVerse-form2" class="list ">
-            <label class="item item-select " id="editVerse-select3">
-                <span class="input-label">Add to categories</span>
-                <select ng-init="vm.getCategories()" ng-model="vm.selectedCategory"
+        <ion-item class="item row" id="verseDetail-list-item19">
+            <span class="col">{{vm.verseDetail.vid}}</span>
+            <button class="col" ng-click="vm.toggleLike()">
+          <i class="icon ion-android-star" ng-class={isactive:vm.verseDetail.isliked}></i>
+        </button>
+        </ion-item>
+
+        <form id="editVerse-form2" class="item row">
+                <span class="input-label col">Add to categories</span>
+                <select class="col"
+                ng-init="vm.getCategories()" ng-model="vm.selectedCategory"
                 ng-options="cat as cat for cat in vm.categories"
                 ng-change="vm.addVerseToCategory()">
                 </select>
-            </label>
         </form>
+        <div class="item">
+          <h3 class="header">In Categories</h3>
+          <span ng-repeat="acat in vm.catList" class="mdl-chip mdl-chip--contact">
+              <span class="mdl-chip__contact mdl-color--pink mdl-color-text--white"></span>
+              <span class="mdl-chip__text">{{acat}}</span>
+          </span>
+        </div>
         <button class=" button button-positive  button-block "
         ng-click="vm.saveVerse()">Save Changes</button>
         <!-- redirect back to verse list page -->
@@ -53,5 +59,5 @@
         class=" button button-positive  button-block ">Cancel</a>
 
     </ion-content>
-  </div>
+  </ion-modal-view>
 </script>
