--- a/template/categories/category-detail.html
+++ b/template/categories/category-detail.html
@@ -20,3 +20,43 @@
         </ion-list>
     </ion-content>
 </ion-view>
+
+<script type="text/ng-template" id="verse-detail.html">
+<ion-modal-view class= "modal" ng-controller="verseDetailCtrl as vm">
+    <!-- header bar -->
+  <ion-header-bar class="bar bar-header header-positive" align-title="center">
+    <h4 class="title">{{vm.verseDetail.bookId}} {{vm.verseDetail.chapId}} {{vm.verseDetail.verseId}}</h4>
+  </ion-header-bar>
+  <!-- main content -->
+    <ion-content padding="true" class="has-header">
+        <ion-item class="item row" id="verseDetail-list-item19">
+            <span class="col">{{vm.verseDetail.vid}}</span>
+            <button class="col" ng-click="vm.toggleLike()">
+          <i class="icon ion-android-star" ng-class={isactive:vm.verseDetail.isliked}></i>
+        </button>
+        </ion-item>
+
+        <form id="editVerse-form2" class="item row">
+                <span class="input-label col">Add to categories</span>
+                <select class="col"
+                ng-init="vm.getCategories()" ng-model="vm.selectedCategory"
+                ng-options="cat as cat for cat in vm.categories"
+                ng-change="vm.addVerseToCategory()">
+                </select>
+        </form>
+        <div class="item">
+          <h3 class="header">In Categories</h3>
+          <span ng-repeat="acat in vm.catList" class="mdl-chip mdl-chip--contact">
+              <span class="mdl-chip__contact mdl-color--pink mdl-color-text--white"></span>
+              <span class="mdl-chip__text">{{acat}}</span>
+          </span>
+        </div>
+        <button class=" button button-positive  button-block "
+        ng-click="vm.saveVerse()">Save Changes</button>
+        <!-- redirect back to verse list page -->
+        <a  id="editVerse-button9" ng-click="vm.cancel()"
+        class=" button button-positive  button-block ">Cancel</a>
+
+    </ion-content>
+  </ion-modal-view>
+</script>
