--- a/template/bookIndex/verseIndex.html
+++ b/template/bookIndex/verseIndex.html
@@ -23,15 +23,15 @@
 </ion-view>
 
 <script type="text/ng-template" id="verse-detail.html">
-<ion-modal-view class= "modal" ng-controller="verseDetailCtrl as vm">
-    <!-- header bar -->
-  <ion-header-bar class="bar bar-header header-positive" align-title="center">
-    <h4 class="title">{{vm.verseDetail.bookId}} {{vm.verseDetail.chapId}} {{vm.verseDetail.verseId}}</h4>
+<ion-modal-view   ng-controller="verseDetailCtrl as vm">
+    <!-- header bar https://www.raymondcamden.com/2015/12/18/is-your-ionic-view-title-not-updating/ -->
+  <ion-header-bar class="padding bar-positive" >
+    <h4 class="title">{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}</h4>
   </ion-header-bar>
   <!-- main content -->
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="padding has-header">
         <ion-item class="item row" id="verseDetail-list-item19">
-            <span class="col">{{vm.verseDetail.vid}}</span>
+            <span class="col">Like</span>
             <button class="col" ng-click="vm.toggleLike()">
           <i class="icon ion-android-star" ng-class={isactive:vm.verseDetail.isliked}></i>
         </button>
@@ -45,11 +45,13 @@
                 ng-change="vm.addVerseToCategory()">
                 </select>
         </form>
-        <div class="item">
+        <div class="item item-text-wrap">
           <h3 class="header">In Categories</h3>
-          <span ng-repeat="acat in vm.catList" class="mdl-chip mdl-chip--contact">
-              <span class="mdl-chip__contact mdl-color--pink mdl-color-text--white"></span>
+          <span ng-repeat="acat in vm.catList track by $index" class="mdl-chip mdl-chip--contact">
+            <span ng-click="vm.gotoCategories(acat)">
+              <span class="mdl-chip__contact mdl-color--pink mdl-color-text--white">#</span>
               <span class="mdl-chip__text">{{acat}}</span>
+            </span>
           </span>
         </div>
         <button class=" button button-positive  button-block "
