--- a/template/categories/categories.html
+++ b/template/categories/categories.html
@@ -1,13 +1,14 @@
-<ion-view title="categories" id="page3" class=" " ng-controller="categoriesCtrl as vm">
-    <ion-nav-buttons side="right" class="buttons">
-    <a class="button button-medium" ui-sref="menu.editCategory">
-        <i class="icon ion-edit"></i>
-    </a>
-      <a class="button button-medium"ui-sref="menu.addCategory">
-        <i  class="icon ion-plus-round"></i>
-      </a>
-    </ion-nav-buttons>
-    <ion-content padding="true" class="has-header">
+<!--
+<ion-nav-bar>
+  <ion-nav-back-button class="">
+    <i class="ion-arrow-left-c"></i> Back
+  </ion-nav-back-button>
+</ion-nav-bar>
+<!--  -->
+<ion-view title="Categories" id="page3" class=" " ng-controller="categoriesCtrl as vm">
+
+
+    <ion-content padding="true" class="">
 
         <ion-list id="categories-list4" class=" " ng-init="vm.getCategories()">
             <ion-item ng-repeat="cat in vm.categories" class="item-icon-right  " id="categories-list-item13"
@@ -15,5 +16,8 @@
                 <i class="icon ion-android-arrow-forward"></i>
             </ion-item>
         </ion-list>
+        <a ui-sref="menu.addCategory"style="position:absolute;bottom:10px;right:10px;z-index:9999" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+          <i class="material-icons">+</i>
+        </a>
     </ion-content>
 </ion-view>
