--- a/template/categories/categories.html
+++ b/template/categories/categories.html
@@ -16,7 +16,9 @@
                 <i class="icon ion-android-arrow-forward"></i>
             </ion-item>
         </ion-list>
-        <a ui-sref="menu.addCategory"style="position:absolute;bottom:10px;right:10px;z-index:9999" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+        <a ui-sref="menu.addCategory"
+        style="position:absolute;bottom:10px;right:10px;z-index:9999"
+        class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
           <i class="material-icons">+</i>
         </a>
     </ion-content>
