updated category and favorite functions for faster optimization of db operations TODO add pull to refresh and reverse sorting by newest added item in categories and favorites

--- a/template/bookIndex/verseIndex.html
+++ b/template/bookIndex/verseIndex.html
@@ -4,7 +4,7 @@
         id="bookSearchResults-list5" class=" " >
             <!-- ui-sref passes parameters to next page-->
             <ion-item ng-repeat="ver in vm.verses"
-            class="item item-text-wrap  item-icon-right"
+            class="item item-text-wrap  item-icon-right" style="width:100%;padding-top:5px;padding-bottom:5px"
             id="bookSearchResults-list-item16" style="display:table">
               <p style="display:inline-block; padding-right:10px; display:table-cell;">
                   {{ver.verse}}
