--- a/template/categories/category-detail.html
+++ b/template/categories/category-detail.html
@@ -1,24 +1,16 @@
 <ion-view title="{{vm.category}}" id="page9" class=" " ng-controller="categoryDetailCtrl as vm">
-  <ion-nav-buttons side="right" class="buttons">
-      <!--
-    <a class="button button-medium" ui-sref="menu.editCategory">
-        <i class="icon ion-edit"></i>
-    </a>
-    <!--  -->
-      <a class="button button-medium"ui-sref="menu.addCategory">
-        <i  class="icon ion-plus-round"></i>
-      </a>
-    </ion-nav-buttons>
     <ion-content padding="true" class="has-header">
         <ion-list ng-init="vm.getVerses()"
-        id="bookSearchResults-list5" class=" " >
-            <div ng-repeat="ver in vm.verseList"
+        id="bookSearchResults-list5" class=" "
+        show-delete="vm.showDelete"
+        can-swipe="vm.itemCanSwipe">
+            <div collection-repeat="ver in vm.verseList"
             class="item-text-wrap  "
             id="bookSearchResults-list-item16">
             <div class="item " style="padding: 5px 5px 5px 15px;">
             <a class="item-icon-right" ng-click="vm.openModal(ver.vid)"
                 <span class="item-note">
-                {{ver.verse}}
+                {{ver.vid}}
                 </span>
                 <i  class="icon ion-more"></i>
               </a>
@@ -32,15 +24,15 @@
 </ion-view>
 
 <script type="text/ng-template" id="verse-detail.html">
-<ion-modal-view class= "modal" ng-controller="verseDetailCtrl as vm">
-    <!-- header bar -->
-  <ion-header-bar class="bar bar-header header-positive" align-title="center">
-    <h4 class="title">{{vm.verseDetail.bookId}} {{vm.verseDetail.chapId}} {{vm.verseDetail.verseId}}</h4>
+<ion-modal-view cache-view="false"  ng-controller="verseDetailCtrl as vm">
+    <!-- header bar https://www.raymondcamden.com/2015/12/18/is-your-ionic-view-title-not-updating/ -->
+  <ion-header-bar class="padding bar-positive" >
+    <h4 style="align:center" class="title">{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}</h4>
   </ion-header-bar>
   <!-- main content -->
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="padding has-header">
         <ion-item class="item row" id="verseDetail-list-item19">
-            <span class="col">{{vm.verseDetail.vid}}</span>
+            <span class="col">Like</span>
             <button class="col" ng-click="vm.toggleLike()">
           <i class="icon ion-android-star" ng-class={isactive:vm.verseDetail.isliked}></i>
         </button>
@@ -54,18 +46,21 @@
                 ng-change="vm.addVerseToCategory()">
                 </select>
         </form>
-        <div class="item">
+        <div class="item item-text-wrap">
           <h3 class="header">In Categories</h3>
-          <span ng-repeat="acat in vm.catList" class="mdl-chip mdl-chip--contact">
-              <span class="mdl-chip__contact mdl-color--pink mdl-color-text--white"></span>
+          <span ng-repeat="acat in vm.catList track by $index" class="mdl-chip mdl-chip--contact">
+            <span ng-click="vm.removeVerseFromCategory(acat)">
+              <span class="mdl-chip__contact mdl-color--pink mdl-color-text--white">X</span>
               <span class="mdl-chip__text">{{acat}}</span>
+            </span>
           </span>
         </div>
+        <!--
         <button class=" button button-positive  button-block "
         ng-click="vm.saveVerse()">Save Changes</button>
         <!-- redirect back to verse list page -->
         <a  id="editVerse-button9" ng-click="vm.cancel()"
-        class=" button button-positive  button-block ">Cancel</a>
+        class=" button button-positive  button-block ">Close</a>
 
     </ion-content>
   </ion-modal-view>
