BUG FIX page refresh on favorites and categories; keep testing all scenarios

--- a/template/bookIndex/verseIndex.html
+++ b/template/bookIndex/verseIndex.html
@@ -23,7 +23,7 @@
 </ion-view>
 
 <script type="text/ng-template" id="verse-detail.html">
-<ion-modal-view cache-view="false"  ng-controller="verseDetailCtrl as vm">
+<ion-modal-view   ng-controller="verseDetailCtrl as vm">
     <!-- header bar https://www.raymondcamden.com/2015/12/18/is-your-ionic-view-title-not-updating/ -->
   <ion-header-bar class="padding bar-positive" >
     <h4 style="align:center" class="title">{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}</h4>
