--- a/template/bookIndex/verse-detail.html
+++ b/template/bookIndex/verse-detail.html
@@ -1,34 +1,36 @@
-<ion-view  title="Edit Verse" id="page6" class=" " ng-controller="verseDetailCtrl as vm">
-  <ion-nav-bar title="{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}" align-title="left">
-  <ion-nav-buttons  title="Edit {{vm.bookId}} {{vm.chapId}} {{vm.verse}}"side="secondary">
-    <button ng-click="vm.like()">
-    <i class="icon ion-android-star" ></i>
-  </button>
-  </ion-nav-buttons>
-</ion-nav-bar>
-    <ion-content padding="true" class="has-header">
-      {{vm.verseDetail.like}}
-        <div class="card item-text-wrap" id="verseDetail-card21">
-            <ion-item class="item " id="verseDetail-list-item19">
-                <!-- <p>{{vm.verseDetail.text}}</p> -->
-                <p>{{vm.verseDetail.vid}}</p>
-            </ion-item>
-        </div>
-        <form id="editVerse-form2" class="list ">
+<ion-view  title="Edit {{vm.bookId}} {{vm.chapId}} : {{vm.verse}}" id="page6" class=" " ng-controller="verseDetailCtrl as vm">
+  <ion-header-bar class="padding bar-positive" >
+    <h4 style="align:center" class="title">{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}</h4>
+  </ion-header-bar>
+    <ion-content  class="padding has-header">
+        <ion-item class="item row" id="verseDetail-list-item19">
+            <span class="col">Like</span>
+            <button class="col" ng-click="vm.toggleLike()">
+          <i class="icon ion-android-star" ng-class={isactive:vm.verseDetail.isliked}></i>
+        </button>
+        </ion-item>
 
-            <label class="item item-select " id="editVerse-select3">
-                <span class="input-label">Add to categories</span>
-                <select ng-init="vm.getCategories()" ng-model="vm.selectedCategory"
+        <form id="editVerse-form2" class="item row">
+                <span class="input-label col">Add to categories</span>
+                <select class="col"
+                ng-init="vm.getCategories()" ng-model="vm.selectedCategory"
                 ng-options="cat as cat for cat in vm.categories"
                 ng-change="vm.addVerseToCategory()">
                 </select>
-            </label>
         </form>
+        <div class="item item-text-wrap">
+          <h3 class="header">In Categories</h3>
+          <span ng-repeat="acat in vm.catList track by $index" class="mdl-chip mdl-chip--contact">
+            <span ng-click="vm.removeVerseFromCategory(acat)">
+              <span class="mdl-chip__contact mdl-color--pink mdl-color-text--white">X</span>
+              <span class="mdl-chip__text">{{acat}}</span>
+            </span>
+          </span>
+        </div>
         <button class=" button button-positive  button-block "
         ng-click="vm.saveVerse()">Save Changes</button>
-        <!-- redirect back to verse list page -->
         <a  id="editVerse-button9" ng-click="vm.cancel()"
-        class=" button button-positive  button-block ">Cancel</a>
+        class=" button button-positive  button-block ">Close</a>
 
     </ion-content>
 </ion-view>
