--- a/template/categories/categories.html
+++ b/template/categories/categories.html
@@ -1,15 +1,5 @@
-<!--
-<ion-nav-bar>
-  <ion-nav-back-button class="">
-    <i class="ion-arrow-left-c"></i> Back
-  </ion-nav-back-button>
-</ion-nav-bar>
-<!--  -->
-<ion-view title="Categories" id="page3" class=" " ng-controller="categoriesCtrl as vm">
-
-
+<ion-view title="Categories" id="page3" cache-view="false" class=" " ng-controller="categoriesCtrl as vm">
     <ion-content padding="true" class="">
-
         <ion-list id="categories-list4" class=" " ng-init="vm.getCategories()">
             <ion-item ng-repeat="cat in vm.categories" class="item-icon-right  " id="categories-list-item13"
             ui-sref="menu.categoryDetail({categoryId:cat})">{{cat}}
