--- a/template/favorites/favorites.html
+++ b/template/favorites/favorites.html
@@ -1,15 +1,27 @@
-<ion-view title="Favorites" id="page2" class=" " ng-controller="favoritesCtrl as vm">
+<ion-view  id="page2" class="bar-positive" cache-view="false" title="Favorites" ng-controller="favoritesCtrl as fvm">
+  <!--  
+  <ion-nav-buttons side="right">
+        <button class="button button-clear button-positive" ng-click="fvm.reset()">
+            Refresh
+        </button>
+    </ion-nav-buttons>
+    <!--
+    <ion-refresher
+    pulling-text="Pull to refresh..."
+    on-refresh="doRefresh()">
+  </ion-refresher>
+  <!--  -->
     <ion-content padding="true" class="has-header">
-        <ion-list ng-init="vm.getVerses()"
+        <ion-list ng-init="fvm.getFavorites()"
         id="bookSearchResults-list5" class=" "
-        show-delete="vm.showDelete"
-        can-swipe="vm.itemCanSwipe">
+        show-delete="fvm.showDelete()"
+        can-swipe="fvm.itemCanSwipe()">
             <!-- ui-sref passes parameters to next page-->
-            <div collection-repeat="ver in vm.verses"
+            <div collection-repeat="ver in fvm.verses"
             class="item-text-wrap"
             id="bookSearchResults-list-item16">
             <div class="item" style="padding: 5px 5px 5px 15px;">
-            <a class="item-icon-right" ng-click="vm.openModal(ver.vid)"
+            <a class="item-icon-right" ng-click="fvm.openModal(ver.vid)"
                 <span class="item-note">
                 {{ver.vid}}
                 </span>
@@ -23,46 +35,3 @@
         </ion-list>
     </ion-content>
 </ion-view>
-
-<script type="text/ng-template" id="verse-detail.html">
-<ion-modal-view cache-view="false"  ng-controller="verseDetailCtrl as vm">
-    <!-- header bar https://www.raymondcamden.com/2015/12/18/is-your-ionic-view-title-not-updating/ -->
-  <ion-header-bar class="padding bar-positive" >
-    <h4 style="align:center" class="title">{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}</h4>
-  </ion-header-bar>
-  <!-- main content -->
-    <ion-content  class="padding has-header">
-        <ion-item class="item row" id="verseDetail-list-item19">
-            <span class="col">Like</span>
-            <button class="col" ng-click="vm.toggleLike()">
-          <i class="icon ion-android-star" ng-class={isactive:vm.verseDetail.isliked}></i>
-        </button>
-        </ion-item>
-
-        <form id="editVerse-form2" class="item row">
-                <span class="input-label col">Add to categories</span>
-                <select class="col"
-                ng-init="vm.getCategories()" ng-model="vm.selectedCategory"
-                ng-options="cat as cat for cat in vm.categories"
-                ng-change="vm.addVerseToCategory()">
-                </select>
-        </form>
-        <div class="item item-text-wrap">
-          <h3 class="header">In Categories</h3>
-          <span ng-repeat="acat in vm.catList track by $index" class="mdl-chip mdl-chip--contact">
-            <span ng-click="vm.removeVerseFromCategory(acat)">
-              <span class="mdl-chip__contact mdl-color--pink mdl-color-text--white">X</span>
-              <span class="mdl-chip__text">{{acat}}</span>
-            </span>
-          </span>
-        </div>
-        <!--
-        <button class=" button button-positive  button-block "
-        ng-click="vm.saveVerse()">Save Changes</button>
-        <!-- redirect back to verse list page -->
-        <a  id="editVerse-button9" ng-click="vm.cancel()"
-        class=" button button-positive  button-block ">Close</a>
-
-    </ion-content>
-  </ion-modal-view>
-</script>
