--- a/template/favorites/favorites.html
+++ b/template/favorites/favorites.html
@@ -1,5 +1,5 @@
 <ion-view  id="page2" class="bar-positive" cache-view="false" title="Favorites" ng-controller="favoritesCtrl as fvm">
-  <!--  
+  <!--
   <ion-nav-buttons side="right">
         <button class="button button-clear button-positive" ng-click="fvm.reset()">
             Refresh
@@ -8,7 +8,7 @@
     <!--
     <ion-refresher
     pulling-text="Pull to refresh..."
-    on-refresh="doRefresh()">
+    on-refresh="fvm.doRefresh()">
   </ion-refresher>
   <!--  -->
     <ion-content padding="true" class="has-header">
