--- a/template/favorites/favorites.html
+++ b/template/favorites/favorites.html
@@ -1,17 +1,17 @@
-<ion-view  id="page2" class="bar-positive" cache-view="false" title="Favorites" ng-controller="favoritesCtrl as fvm">
+<ion-view  id="page2" class="bar-positive"  title="Favorites" ng-controller="favoritesCtrl as fvm">
   <!--
   <ion-nav-buttons side="right">
         <button class="button button-clear button-positive" ng-click="fvm.reset()">
             Refresh
         </button>
     </ion-nav-buttons>
-    <!--
-    <ion-refresher
+    <!--  -->
+
+    <ion-content padding="true" class="has-header">
+      <ion-refresher
     pulling-text="Pull to refresh..."
     on-refresh="fvm.doRefresh()">
   </ion-refresher>
-  <!--  -->
-    <ion-content padding="true" class="has-header">
         <ion-list ng-init="fvm.getFavorites()"
         id="bookSearchResults-list5" class=" "
         show-delete="fvm.showDelete()"
