--- a/template/menu.html
+++ b/template/menu.html
@@ -23,7 +23,7 @@
                 <ion-item class="item-icon-right  " id="menu-list-item2" ui-sref="menu.search" menu-close>Search
                     <i class="icon ion-search"></i>
                 </ion-item>
-                <ion-item class="item-icon-right  " id="menu-list-item3" href="#/menu/favorites" menu-close>Favorites
+                <ion-item class="item-icon-right  " id="menu-list-item3" ui-sref="menu.favorites" menu-close>Favorites
                     <i class="icon ion-heart"></i>
                 </ion-item>
                 <ion-item class="item-icon-right  " id="menu-list-item4" ui-sref="menu.categories" menu-close>Categories
