--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,38 @@
 /* Empty. Add your own CSS if you like */
+.loading-container .loading {
+  width: 64px;
+  height: 64px;
+  background: url(../images/icon-invert.svg) no-repeat center center;
+  background-color: transparent;
+  background-size: 64px 64px;
+  margin: 100px auto;
+  -webkit-animation: sk-rotateplane 2s infinite ease-in-out;
+  animation: sk-rotateplane 2s infinite ease-in-out;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+.loading-container .loading .spinner { display: none; }
+
+.scroll-refresher .icon-refreshing {
+  width: 40px;
+  height: 40px;
+  margin: auto;
+  background-color: #333;
+  border-radius: 7px;
+  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+  animation: sk-rotateplane 1.2s infinite ease-in-out;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+.icon-refreshing .spinner { display: none; }
+
+@-webkit-keyframes sk-rotateplane {
+  0% { -webkit-transform: perspective(120px) rotateY(0deg); }
+  50% { -webkit-transform: perspective(120px) rotateY(180deg); }
+  100% { -webkit-transform: perspective(120px) rotateY(360deg); }
+}
+@keyframes sk-rotateplane {
+  0% { -webkit-transform: perspective(120px) rotateY(0deg); transform: perspective(120px) rotateY(0deg); }
+  50% { -webkit-transform: perspective(120px) rotateY(180deg); transform: perspective(120px) rotateY(180deg); }
+  100% { -webkit-transform: perspective(120px) rotateY(360deg); transform: perspective(120px) rotateY(360deg); }
+}
