--- a/template/bookIndex/verse-detail.html
+++ b/template/bookIndex/verse-detail.html
@@ -21,14 +21,16 @@
         <div class="item item-text-wrap">
           <h3 class="header">In Categories</h3>
           <span ng-repeat="acat in vm.catList track by $index" class="mdl-chip mdl-chip--contact">
-            <span ng-click="vm.removeVerseFromCategory(acat)">
-              <span class="mdl-chip__contact mdl-color--pink mdl-color-text--white">X</span>
+            <span ng-click="vm.gotoCategory(acat)">
+              <span class="mdl-chip__contact mdl-color--pink mdl-color-text--white">{{vm.getAvatar(acat)}}</span>
               <span class="mdl-chip__text">{{acat}}</span>
             </span>
           </span>
         </div>
+        <!--  
         <button class=" button button-positive  button-block "
         ng-click="vm.saveVerse()">Save Changes</button>
+        <!--  -->
         <a  id="editVerse-button9" ng-click="vm.cancel()"
         class=" button button-positive  button-block ">Close</a>
 
