--- a/template/menu.html
+++ b/template/menu.html
@@ -9,11 +9,13 @@
         <ion-nav-view name="side-menu21"></ion-nav-view>
     </ion-side-menu-content>
     <ion-side-menu side="left" id="side-menu21" expose-aside-when="large">
-        <ion-header-bar class="bar-stable">
+        <ion-header-bar class="bar-stable" style="background-color:violet">
             <div class="title">Menu</div>
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header">
             <ion-list id="menu-list3" class=" ">
+                <ion-item class="menu-style" style="height:200px;background-color:violet">
+              </ion-item>
                 <ion-item class="item-icon-right  " id="menu-list-item0" ui-sref="menu.home" menu-close>Home
                     <i class="icon ion-android-home"></i>
                 </ion-item>
