FIXED big search result causes slowdown and bugs due to large result list

--- a/template/menu.html
+++ b/template/menu.html
@@ -8,10 +8,10 @@
         </ion-nav-bar>
         <ion-nav-view name="side-menu21"></ion-nav-view>
     </ion-side-menu-content>
-    <ion-side-menu side="left" id="side-menu21" expose-aside-when="large">
-        <ion-header-bar class="bar-stable" style="background-color:violet">
-            <div class="title">Menu</div>
-        </ion-header-bar>
+    <ion-side-menu side="left" id="side-menu21" expose-aside-when="large" >
+      <ion-header-bar style=" background-color:violet;">
+
+      </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header">
             <ion-list id="menu-list3" class=" ">
                 <ion-item class="menu-style" style="height:200px;background-color:violet">
